--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,19 @@
 .logo{
   margin:20px;
 }
+.dropdown-menu {
+  background-color: lightgrey;
+  position: absolute;
+
+  display: none;
+
+}
+.position-relative{
+
+}
+.dropdown-menu li{
+  list-style: none;
+}
 .row{
   display: flex;
   justify-content: space-between;
